...
          headerShown: false,
        })}
      >
        <Tab.Screen
          name="Home"
          component={HomeStack}
          options={{ tabBarButtonTestID: "tab-home" }}
        />
        <Tab.Screen
          name="Competitions"
          component={CompetitionsStack}
          options={{
            tabBarButtonTestID: "tab-competitions",
            tabBarBadge: hasUnreadNotifications ? "" : null,
            tabBarBadgeStyle: {
              backgroundColor: "red",
              minWidth: 16,
              maxHeight: 16,
              borderRadius: 8,
...
