...
    );
  }

  return (
    <Container testID="ladder-matchmaking">
      <PostButton
        testID="matchmaking-post-match"
        activeOpacity={0.85}
        disabled={cannotPost}
        isDisabled={cannotPost}
        onPress={handlePostMatch}
      >
        <PostButtonText>{buttonLabel}</PostButtonText>
...
